finish get requests for features values, delete animation of values because it not wait for values

--- a/app/css/common.css
+++ b/app/css/common.css
@@ -72,6 +72,7 @@ body {
 .features-item .count {
   font-size: 35px;
   float: right;
+  transition: color 2s ease 0s;
 }
 .features-item .text {
   position: absolute;
