detached one less to components and do markup for filters page

--- a/app/less/styles.less
+++ b/app/less/styles.less
@@ -1,3 +1,29 @@
-@import '_common';
+@import '_fonts';
+@import '_layout';
+
+@import 'pages/_timeline';
+@import 'pages/_finished';
+@import 'pages/_statistics';
+@import 'pages/_filters';
+
 @import (less) '_table.css';
 
+
+body {
+  font-family: 'RobotoDraft', 'Roboto', 'Helvetica Neue, Helvetica, Arial', sans-serif;
+}
+
+.user-icon {
+  width: 30px;
+  border-radius: 50%;
+  margin-right:5px;
+}
+
+.gitter-icon {
+  width: 25px;
+  margin-right: 2px;
+}
+
+
+
+@import '_media';
