--- a/app/template/inc/_header.html
+++ b/app/template/inc/_header.html
@@ -21,5 +21,6 @@
       <a href="#scroll-tab-1" class="mdl-layout__tab is-active">Timeline</a>
       <a href="#scroll-tab-2" class="mdl-layout__tab">Finished</a>
       <a href="#scroll-tab-3" class="mdl-layout__tab ">Statistics</a>
+      <a href="#scroll-tab-4" class="mdl-layout__tab ">Filters</a>
     </div>
 </header>
