--- a/app/template/index.html
+++ b/app/template/index.html
@@ -11,6 +11,7 @@
           @@include('inc/pages/_timeline.html')
           @@include('inc/pages/_finished.html')
           @@include('inc/pages/_statistics.html')
+          @@include('inc/pages/_filters.html')
       </main>     
     </div>
 
