--- a/app/template/inc/_head.html
+++ b/app/template/inc/_head.html
@@ -25,4 +25,7 @@
   <script src="libs/slickcircular/js/jquery.classycountdown.js"></script>
   <!-- logo title aka bash font -->
   <link href="https://fonts.googleapis.com/css?family=Inconsolata" rel="stylesheet">
+
+  <script src="https://npmcdn.com/flickity@2/dist/flickity.pkgd.js"></script>
+  <link href="https://npmcdn.com/flickity@2/dist/flickity.css" rel="stylesheet">
 </head>
