--- a/app/template/inc/pages/_filters.html
+++ b/app/template/inc/pages/_filters.html
@@ -1,42 +1,49 @@
-<section class="mdl-layout__tab-panel" id="scroll-tab-4">
+<section class="mdl-layout__tab-panel is-active" id="scroll-tab-4">
   <div class="page-content"><!-- Your content goes here -->
     <div class="search">
-      <input class="search-by-name" placeholder="search by user" type="text">
+      <input class="search-by-name" placeholder="search by name" type="text">
       <input class="search-by-wtwr" placeholder="type anything..." type="text">
-      <button class="search-reset" type="button">Reset</button>
+      <input class="search-reset" placeholder="reset" type="button" value="Reset all">
     </div>
-    <div class="day-block-container">
-      <div class="day-block-item">15</div>
-      <div class="day-block-item">15</div>
-      <div class="day-block-item">15</div>
-    </div>
-    <div class="left-sidebar">
-      <div class="filters">
-        <button class="filters-button" type="button">links</button>
-        <button class="filters-button" type="button">pr's</button>
-        <button class="filters-button" type="button">images</button>
-        <button class="filters-button" type="button">video</button>
+     <div class="scroll-wrapper">
+      <!-- <div class="horizontal-scroll-wrapper squares"></div> -->
+      <div class="block-date-scroll carousel"
+      data-flickity='{ "freeScroll": true, "contain": true, "prevNextButtons": false, "pageDots": false }'>
       </div>
-      <div class="mini-calendar"></div>
     </div>
-    <div class="center-messages-content">
-        <details class="day-wrapper" open>  
-          <summary class="day-title">Посмотреть код</summary>
-          <div class="message-wrapper">
-              <span class="message-date-sent">sdf</span>
-              <div class="message-avatar">sdf</div>
-              <span class="message-markup">dfgdfgdfgdfgdfg</span>
-            </div>
-      </details>
-    </div>
-    <div class="right-sidebar">
-      <div class="chart-www"></div>
-      <div class="chart-count-mess-per-user"></div>
-      <div class="summary-per-media">
-        <div class="summary-links-count"></div>
-        <div class="summary-videos-count"></div>
+
+   
+
+
+    <div class="filters-main-content">
+      <div class="left-sidebar">
+        <div class="filters">
+          <button class="filters-button" type="button">links</button>
+          <button class="filters-button" type="button">pr's</button>
+          <button class="filters-button" type="button">images</button>
+          <button class="filters-button" type="button">video</button>
+        </div>
+        <div class="mini-calendar"></div>
       </div>
-      <div class="chart-count-mension-per-user"></div>
+      <div class="center-messages-content">
+          <details class="day-wrapper" open>  
+            <summary class="day-title">Посмотреть код</summary>
+            <div class="message-wrapper">
+                <span class="message-date-sent">sdf</span>
+                <div class="message-avatar">sdf</div>
+                <span class="message-markup">dfgdfgdfgdfgdfg</span>
+              </div>
+        </details>
+      </div>
+      <div class="right-sidebar">
+        <div class="chart-www"></div>
+        <div class="chart-count-mess-per-user"></div>
+        <div class="summary-per-media">
+          <div class="summary-links-count"></div>
+          <div class="summary-videos-count"></div>
+        </div>
+        <div class="chart-count-mension-per-user"></div>
+      </div>
     </div>
   </div>
 </section>
