add mini calendar

--- a/app/less/pages/_filters.less
+++ b/app/less/pages/_filters.less
@@ -51,10 +51,10 @@
     }
     .filters-main-content{
       display: flex;
-      justify-content: center;
+      // justify-content: center;
       .left-sidebar {
         width: 25%;
-        height: 100%;
+        min-height: 100%;
         border: 1px solid black;
         .filters {
           .filters-button {
@@ -62,7 +62,7 @@
           }
         }
         .mini-calendar {
-  
+          
         }
       }
   
