--- a/app/template/inc/_head.html
+++ b/app/template/inc/_head.html
@@ -25,7 +25,10 @@
   <script src="libs/slickcircular/js/jquery.classycountdown.js"></script>
   <!-- logo title aka bash font -->
   <link href="https://fonts.googleapis.com/css?family=Inconsolata" rel="stylesheet">
-
+  <!-- flickity scrollable flex date divs -->
   <script src="https://npmcdn.com/flickity@2/dist/flickity.pkgd.js"></script>
   <link href="https://npmcdn.com/flickity@2/dist/flickity.css" rel="stylesheet">
+  <!-- zabuto calendar -->
+  <script src="libs/calendar/zabuto_calendar.min.js"></script>
+  <link rel="stylesheet" type="text/css" href="libs/calendar/zabuto_calendar.min.css">
 </head>
