--- a/app/less/pages/_filters.less
+++ b/app/less/pages/_filters.less
@@ -11,34 +11,30 @@
       align-items: stretch;
       &-by-name {
         .search-input;
-        // width:30%;
       }
       &-by-wtwr {
         .search-input;  
-        // width:40%;
-        // margin: 0 10px;
       }
       &-reset {
         .search-input;  
-        // width:30%;
       }
     }
     .scroll-wrapper{
       position: relative;
       width: 100%;
-      height: 80px;
+      height: 50px;
       margin: 5px 0;
       //https://css-tricks.com/creating-responsive-touch-friendly-carousels-with-flickity/
       //https://codepen.io/desandro/pen/zxRYGo
       .carousel-cell {
         position: relative;
-        width: 70px;
-        height: 70px;
+        width: 50px;
+        height: 50px;
         margin-right: 5px;
-        background: #8C8;
+        background: #B8CAFF;
         border-radius: 5px;
         color: white;
-        font-size: 40px; 
+        font-size: 30px; 
         text-align: center;
         display: block; 
         span {
@@ -47,17 +43,32 @@
           left: 50%;
           transform: translate(-50%, -50%);
         }
+        &:hover{
+          background: darken(#B8CAFF, 10%);
+        }
+        &:active{
+          background: darken(#B8CAFF, 20%);
+        }
       }
     }
     .filters-main-content{
       display: flex;
-      // justify-content: center;
+      justify-content: space-between;
       .left-sidebar {
         width: 25%;
         min-height: 100%;
-        border: 1px solid black;
-        .filters {
-          .filters-button {
+        // border: 1px solid black;
+        .button-filters {
+          text-align: center;
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          flex-wrap: wrap;
+          // height: 500px;
+
+          .filter-button{
+            width: 80%;
+            margin: 5px 10px ;
             // .button;
           }
         }
@@ -67,28 +78,51 @@
       }
   
       .center-messages-content {
-        width: 50%;
+        box-shadow: 0 10px 25px 0px rgba(0,0,0,0.15);
+        width: 45%;
         height: 100%;
-        border: 1px solid black;
+        // border: 1px solid black;
         details.day-wrapper{
+          background-color: white;
+          margin: 10px;
+          border-radius: 4px;
+          cursor: pointer;
+          // border: 1px solid black;
+
           summary.day-title{
-  
+            user-select: none;
+            padding: 10px;
+            background-color: rgb(242, 244, 253);
+            text-transform: uppercase;
+            &:hover{
+              background-color: darken(rgb(242, 244, 253), 5%);
+            }
+            &:active{
+              background-color: darken(rgb(242, 244, 253), 10%);
+            }
           }
           .message-wrapper{
+            cursor: default;
+            background-color: lighten(rgb(211, 211, 211), 1%);
+            padding: 10px;
+            margin: 10px;
+            border-radius: 8px;
+
             &-date-sent{
-  
+              
             }
             &-avatar{
-  
+              float: left;
+              
             }
             &--markup{
-  
+              
             }
           }
         }
       }
       .right-sidebar{
-        border: 1px solid black;
+        // border: 1px solid black;
         width: 25%;
         height: 100%;
         .chart-count-mess-per-user{
