sidebars css proceed

--- a/app/template/inc/pages/_filters.html
+++ b/app/template/inc/pages/_filters.html
@@ -34,10 +34,15 @@
           </script>
         </div>
       </div>
-      <div class="center-messages-content">
-        <!-- messages renders here -->
+      <div class="messages-wrapper">
+        <div class="center-messages-content">
+          <!-- messages renders here -->
+        </div>
       </div>
       <div class="right-sidebar">
+        <button class="filter-button mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent" type="button">
+              all with video</button>
+        <!-- </div> -->
         <div class="chart-www"></div>
         <div class="chart-count-mess-per-user"></div>
         <div class="summary-per-media">
