--- a/app/less/pages/_filters.less
+++ b/app/less/pages/_filters.less
@@ -23,7 +23,7 @@
       position: relative;
       width: 100%;
       height: 50px;
-      margin: 5px 0;
+      margin-bottom: 5px;
       //https://css-tricks.com/creating-responsive-touch-friendly-carousels-with-flickity/
       //https://codepen.io/desandro/pen/zxRYGo
       .carousel-cell {
@@ -52,9 +52,14 @@
       }
     }
     .filters-main-content{
+
       display: flex;
-      justify-content: space-between;
+      justify-content: space-around;
+      width: 100%;
+      position: relative;
       .left-sidebar {
+        // margin-left:10px;
+        box-shadow: 0px 10px 25px 5px rgba(0,0,0,0.15);
         width: 25%;
         min-height: 100%;
         // border: 1px solid black;
@@ -76,11 +81,22 @@
           
         }
       }
-  
-      .center-messages-content {
-        box-shadow: 0 10px 25px 0px rgba(0,0,0,0.15);
+      .messages-wrapper {
         width: 45%;
-        height: 100%;
+        position:relative;
+      }
+      .center-messages-content {
+        box-shadow: 0px 10px 25px 5px rgba(0,0,0,0.15);
+        // width: 45%;
+        // height: calc(60vh - 100px);
+        // overflow-y: auto;
+        margin: 0 auto;
+        // border: 1px solid red;
+        // width:800px;
+        position: absolute;
+        bottom:0px;
+        top:0px;
+        overflow:auto;
         // border: 1px solid black;
         details.day-wrapper{
           background-color: white;
@@ -103,17 +119,23 @@
           }
           .message-wrapper{
             cursor: default;
-            background-color: lighten(rgb(211, 211, 211), 1%);
+            background-color: lighten(rgb(248, 223, 223), 1%);
             padding: 10px;
             margin: 10px;
             border-radius: 8px;
+            position: relative;
 
-            &-date-sent{
-              
+            .message-date-sent{
+              position: absolute;
+            
+              top: 10px;
+              right: 10px;
             }
-            &-avatar{
-              float: left;
-              
+            .message-avatar{
+              position: relative;
+              img{
+                width: 30px;
+              }
             }
             &--markup{
               
@@ -123,8 +145,9 @@
       }
       .right-sidebar{
         // border: 1px solid black;
+        box-shadow: 0px 10px 25px 5px rgba(0,0,0,0.15);
         width: 25%;
-        height: 100%;
+        min-height: 100%;
         .chart-count-mess-per-user{
   
         }
