--- a/app/template/inc/_head.html
+++ b/app/template/inc/_head.html
@@ -12,8 +12,8 @@
   <!-- google charts  -->
   <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
   <!-- <script src="libs/jquery.min.js"></script> -->
-  <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
-  <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+  <script src="libs/jquery/jquery-1.12.4.js"></script>
+  <script src="libs/jquery/jquery-ui.js"></script>
   <!-- material lite  -->
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
   <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css">
@@ -26,8 +26,8 @@
   <!-- logo title aka bash font -->
   <link href="https://fonts.googleapis.com/css?family=Inconsolata" rel="stylesheet">
   <!-- flickity scrollable flex date divs -->
-  <script src="https://npmcdn.com/flickity@2/dist/flickity.pkgd.js"></script>
-  <link href="https://npmcdn.com/flickity@2/dist/flickity.css" rel="stylesheet">
+  <script src="libs/flickity/flickity.pkgd.min.js"></script>
+  <link href="libs/flickity/flickity.min.css" rel="stylesheet">
   <!-- zabuto calendar -->
   <script src="libs/calendar/zabuto_calendar.min.js"></script>
   <link rel="stylesheet" type="text/css" href="libs/calendar/zabuto_calendar.min.css">
