--- a/app/template/inc/pages/_filters.html
+++ b/app/template/inc/pages/_filters.html
@@ -1,4 +1,5 @@
 <section class="mdl-layout__tab-panel is-active" id="scroll-tab-4">
+    <button class="open closebtn" type="button">open</button>
   <div class="page-content"><!-- Your content goes here -->
     <div class="search">
       <input class="search-by-name" placeholder="search by name" type="text">
@@ -12,8 +13,10 @@
       <!-- date blocks renders here -->
     </div>
     </div>
+    
     <div class="filters-main-content">
       <div class="left-sidebar">
+          
         <div class="button-filters">
            <button class="filter-button mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent" type="button">
              all with links</button>
