--- a/app/less/styles.less
+++ b/app/less/styles.less
@@ -7,7 +7,7 @@
 @import 'pages/_filters';
 
 @import (less) '_table.css';
-
+@import (less) 'sass.css';
 
 body {
   font-family: 'RobotoDraft', 'Roboto', 'Helvetica Neue, Helvetica, Arial', sans-serif;
