disable bootstrap css for calendar and leave Fawesome icons for controls

--- a/app/template/inc/_head.html
+++ b/app/template/inc/_head.html
@@ -28,6 +28,13 @@
   <!-- flickity scrollable flex date divs -->
   <script src="libs/flickity/flickity.pkgd.min.js"></script>
   <link href="libs/flickity/flickity.min.css" rel="stylesheet">
+  <!-- jQuery CDN -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
+
+  <!-- Bootstrap CDN -->
+  <!-- <link rel="stylesheet" href="https://netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css"> -->
+  <!-- <script src="https://netdna.bootstrapcdn.com/bootstrap/3.0.2/js/bootstrap.min.js"></script> --> -->
+  <link href="https://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css" rel="stylesheet">
   <!-- zabuto calendar -->
   <script src="libs/calendar/zabuto_calendar.min.js"></script>
   <link rel="stylesheet" type="text/css" href="libs/calendar/zabuto_calendar.min.css">
