try to slide sidebars on small screens - @media

--- a/app/less/pages/_filters.less
+++ b/app/less/pages/_filters.less
@@ -180,7 +180,34 @@
 
 
 
-
+@media screen and (max-width: 768px) {
+  .left-sidebar {
+    margin-left:-250px;
+    height: 100%; /* 100% Full-height */
+    width: 0; /* 0 width - change this with JavaScript */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Stay on top */
+    top: 0; /* Stay at the top */
+    left: 0;
+    background-color: #111; /* Black*/
+    overflow-x: hidden; /* Disable horizontal scroll */
+    padding-top: 60px; /* Place content 60px from the top */
+    transition: 0.5s; /* 0.5 second transition effect to slide in the sidenav */
+    .closebtn {
+      position: absolute;
+      top: 0;
+      right: 25px;
+      font-size: 36px;
+      margin-left: 50px;
+    }
+  }
+  .right-sidebar {
+    display: none;
+  }
+  #scroll-tab-4 .page-content .filters-main-content .messages-wrapper {
+    width: 100%;
+  }
+}
 
 
 
