--- a/app/template/inc/pages/_filters.html
+++ b/app/template/inc/pages/_filters.html
@@ -1,34 +1,62 @@
-<section class="mdl-layout__tab-panel is-active" id="scroll-tab-4">
-    
-  <button class="open closebtn" type="button">open</button>
-  
+<section class="mdl-layout__tab-panel" id="scroll-tab-4">
   <div class="page-content"><!-- Your content goes here -->
     <div class="search">
-      <input class="search-by-name" placeholder="search by name" type="text">
-      <input class="search-by-wtwr" placeholder="search anything..." type="text">
-      <input class="search-reset" placeholder="reset" type="button" value="Reset all">
+      <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+        <input class="search-by-wtwr mdl-textfield__input" type="text" id="sample2">
+        <label class="mdl-textfield__label" for="sample2">Type here anything for search...</label>
+      </div>
     </div>
-     <div class="scroll-wrapper">
-      <!-- https://css-tricks.com/creating-responsive-touch-friendly-carousels-with-flickity/ -->
-      <div class="block-date-scroll carousel"
-      data-flickity='{ "freeScroll": true, "contain": true, "prevNextButtons": false, "pageDots": false }'>
-      <!-- date blocks renders here -->
-    </div>
-    </div>
-    
+
     <div class="filters-main-content">
+        
       <div class="left-sidebar">
-          
+        
+
+        <button class="open closebtn" type="button">More filters</button>
+        <button class="close closebtn" type="button">X</button>
         <div class="button-filters">
-           <button class="filter-button mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent" type="button">
-             all with links</button>
-          <button class="filter-button mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent" type="button">
-              all with pr's</button>
-          <button class="filter-button mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent" type="button">
-              all with images</button>
-          <button class="filter-button mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent" type="button">
-              all with video</button>
+          <h5 class="filters-title">Filters</h5>
+          <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+            <input class="search-by-username mdl-textfield__input" type="text" id="sample1">
+            <label class="mdl-textfield__label" for="sample1">Search messages by username...</label>
+          </div>
+
+           <!-- <button id="links-filter" class="filter-button mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent" type="button">
+              With links</button> -->
+          <button id="youtube-filter" class="filter-button mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent" type="button">
+              Youtube's videos</button>
+          <button id="github-filter" class="filter-button mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent" type="button">
+              Github links</button>
+          <button id="image-filter" class="filter-button mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent" type="button">
+              With images</button>
+          <button id="twitter-filter" class="filter-button mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent" type="button">
+              Twitter posts</button>
+          <button id="meetup-filter" class="filter-button mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent" type="button">
+              Meetups</button>
+       
+
+          <div id="controls">
+              <label class="switch">
+                <input type="checkbox" id="youtube-checkbox">
+                <div class="slider round">
+                <span  class="on">
+                  <i class="fa fa-youtube-play" aria-hidden="true"></i>
+                  &nbsp;YOUTUBE PREVIEW</span>
+                <!-- <span class="off">YOUTUBE PREVIEW</span> -->
+                </div>
+              </label>
+              <label class="switch">
+                <input type="checkbox" id="twitter-checkbox">
+                <div class="slider round">
+                  <span class="on">
+                    <i class="fa fa-twitter-square" aria-hidden="true"></i>
+                    &nbsp;TWITTER PREVIEW</span>
+                  <!-- <span class="off">TWITTER PREVIEW</span> -->
+                </div>
+              </label>
+          </div>
         </div>
+
         <div class="mini-calendar">
           <!-- https://github.com/zabuto/calendar -->
           <div id="my-calendar"></div>
@@ -40,17 +68,35 @@
         </div>
       </div>
       <div class="right-sidebar">
-        <button class="filter-button mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent" type="button">
-              all with video</button>
-        <!-- </div> -->
-        <div class="chart-www"></div>
-        <div class="chart-count-mess-per-user"></div>
-        <div class="summary-per-media">
-          <div class="summary-links-count"></div>
-          <div class="summary-videos-count"></div>
+        <div class="favorites-wrapper">
+          <div class="filters-title">
+            <span class="favorites-title">Hello anon!
+              <a class="signup-button">Sign up!</a>
+            </span>
+          </div>
+            <button id="view-favorites-button" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--colored" type="button">
+                View favorites 
+             </button>
         </div>
-        <div class="chart-count-mension-per-user"></div>
+
+        <div class="total-block">
+          <h5 class="filters-title">Total media summary</h5>
+          <p>By <span class="total-days">...</span> we had written 
+            <span class="total-messages">...</span> helpful messages. It was:
+          </p>
+            <ul>
+              <li class="total-links"></li>
+              <li class="total-videos"></li>
+              <li class="total-github"></li>
+              <li class="total-images"></li>
+              <li class="total-mentions"></li>
+              <li class="total-finished-tasks"></li>
+            </ul>
+        </div>
+
+        <div id="donutchart" style="width: 100%; height: 200px;"></div>
       </div>
     </div>
   </div>
+  
 </section>
