--- a/app/template/inc/_head.html
+++ b/app/template/inc/_head.html
@@ -1,4 +1,14 @@
 <head>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-114928239-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-114928239-1');
+  </script>
+
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=0.9">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -31,11 +41,19 @@
   <!-- jQuery CDN -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
 
-  <!-- Bootstrap CDN -->
-  <!-- <link rel="stylesheet" href="https://netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css"> -->
-  <!-- <script src="https://netdna.bootstrapcdn.com/bootstrap/3.0.2/js/bootstrap.min.js"></script> --> -->
   <link href="https://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css" rel="stylesheet">
   <!-- zabuto calendar -->
   <script src="libs/calendar/zabuto_calendar.min.js"></script>
   <link rel="stylesheet" type="text/css" href="libs/calendar/zabuto_calendar.min.css">
+  <!-- highlighting for code blocks -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/styles/androidstudio.min.css">
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/highlight.min.js"></script>
+  <!-- font for messages -->
+  <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro" rel="stylesheet">
+  <!-- easyautocomplete JS file -->
+  <script src="libs/easyautocomplete/jquery.easy-autocomplete.min.js"></script> 
+  <!-- easyautocomplete CSS file -->
+  <link rel="stylesheet" href="libs/easyautocomplete/easy-autocomplete.css">  
+  <!-- fot twitter preview -->
+  <script async src="//cdn.embedly.com/widgets/platform.js" charset="UTF-8"></script>
 </head>
