--- a/app/template/inc/_header.html
+++ b/app/template/inc/_header.html
@@ -2,7 +2,7 @@
   <div class="mdl-layout__header-row">
     <!-- Title -->
     <span class="mdl-layout-title"> 
-      <img src="https://avatars-02.gitter.im/group/iv/3/57542d27c43b8c601977a0b6?s=48" class="img-logo"> 
+      <img src="assets/logo1.png" class="img-logo"> 
       <span style="color: crimson;">pc</span>
       <span style="color: rgb(79, 206, 79);">(master*)</span>
       <span style="color: yellow;">kottans-stats $</span>
