--- a/app/template/index.html
+++ b/app/template/index.html
@@ -16,8 +16,8 @@
           
       </main>     
     </div>
+    @@include('inc/pages/_popups.html')
 
-    
     @@include('inc/_js-css-links.html')
   </body>
 </html>
