--- a/app/template/inc/pages/_filters.html
+++ b/app/template/inc/pages/_filters.html
@@ -81,8 +81,8 @@
 
         <div class="total-block">
           <h5 class="filters-title">Total media summary</h5>
-          <p>By <span class="total-days">...</span> we had written 
-            <span class="total-messages">...</span> helpful messages. It was:
+          <p>For the last <span class="total-days">...</span> we wrote 
+            <span class="total-messages">...</span> helpful messages. These were:
           </p>
             <ul>
               <li class="total-links"></li>
