add height for mobile devices

--- a/app/less/pages/_filters.less
+++ b/app/less/pages/_filters.less
@@ -177,6 +177,9 @@
 
 
 @media screen and (max-width: 768px) {
+  #scroll-tab-4 .page-content .filters-main-content {
+    height: 100vh;
+  }
   #scroll-tab-4 .page-content .filters-main-content .left-sidebar {
     background: white !important;
     width: 100%;
