add emoji formatter for messages

--- a/app/template/inc/_head.html
+++ b/app/template/inc/_head.html
@@ -56,4 +56,8 @@
   <link rel="stylesheet" href="libs/easyautocomplete/easy-autocomplete.css">  
   <!-- fot twitter preview -->
   <script async src="//cdn.embedly.com/widgets/platform.js" charset="UTF-8"></script>
+  <!-- emoji highlighter -->
+  <link rel="stylesheet" href="libs/js-emoji/emoji.css"> 
+  <script src="libs/js-emoji/emoji.js"></script> 
+  <script src="libs/js-emoji/jquery.emoji.js"></script> 
 </head>
